<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- Setup Fragment strings english -->
    <string name="app_name">EVamEg</string>
    <string name="welcome_message">Welcome to EVamEg!</string>
    <string name="welcome_button">Next</string>
    <string name="back_button">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_scan">Do you want to scan your ID?</string>
    <string name="info_scan">Scanning your ID will make it possible to automatically retrieve commonly used Data for this App, that you will most likely need to input later.</string>
    <string name="welcome_alert_no_caption">Are you sure?</string>
    <string name="welcome_alert_no_text">As the Data will be needed for almost every functionality of the App, you will be asked again for this.</string>
    <string name="welcome_alert_yes_caption">Scan failed</string>
    <string name="welcome_alert_yes_text">Manually input data?</string>

    <!-- Profile Fragment strings english -->
    <string name="title_fragment_profile">Profile Fragment</string>
    <string name="builder_profile_activity_title">Edit data</string>
    <string name="profile_builder_ok">OK</string>
    <string name="profile_builder_return">Cancel</string>
    <string name="profile_builder_toast_success">data inserted</string>


    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temp">temp</string>
    <string name="required">Required</string>

    <!-- fragments name -->
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="mapview">Map</string>
    <string name="profile">Profile</string>


    <!-- activity_profile.xml strings english -->
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="birthday">Birth date:</string>
    <string name="domicile">domicile:</string>
    <string name="postal_code">Postal Code:</string>
    <string name="street">Street:</string>
    <string name="User_id">ID:</string>


    <!-- layout_dialog_popup.xml strings english  -->
    <string name="alertDialog_firstname_hint">Firstname</string>
    <string name="alertDialog_lastname_hint">Lastname</string>
    <string name="alertDialog_birth_date_hint">Birth date</string>
    <string name="alertDialog_domicil_hint">Domicile</string>
    <string name="alertDialog_postal_code_hint">Postal code</string>
    <string name="alertDialog_street_hint">Street</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>

    <!-- Map Fragment strings english -->
    <string name="map_question">Do you want to proceed to book a date?</string>

    <!-- Home Fragment strings english -->
    <string name="office_rss_title">Office News</string>

    <!-- Preferences Fragment strings en -->
    <string name="preference_category_1">Interface</string>
    <string name="pref_dark_mode">Dark Mode</string>
    <string name="pref_languages">Languages</string>
    <string name="pref_languages_summary">Change the language of the App.</string>
    <string name="pref_feedback">Feedback</string>
    <string name="pref_feedback_more">Send Feedback</string>
    <string name="pref_feedback_summary">Request new functionality or tell us if there is an error.</string>
    <string name="pref_misc">Misc</string>


    <!-- Confirmation Fragment strings en -->
    <string name="confirm">Submit</string>
    <string name="confirm_time">Please choose a time:</string>
    <string name="confirm_data">You chose the following:</string>
    <string name="confirm_date">Please choose a date:</string>
    <string name="date">Set Date</string>
    <string name="date2">Date</string>


    <!-- History Fragment strings en -->
    <string name="applicationBeingProcessedDesc">This application is being processed, this can take a few years. We will contact you should we require more information</string>
    <string name="applicationCompleteDesc">This application has been processed and marked as complete, no further actions are needed</string>
    <string name="show_more_info">Show more info</string>
    <string name="status_since">Status since</string>
    <string name="status">Status</string>
    <string name="complete">Complete</string>
    <string name="processing">Processing</string>

    <!-- NewApplication activity en -->
    <string name="new_aufenthaltstitel">New residence permit</string>
    <string name="apply_ElektronischeLohnsteuerkarte">Apply for Income Tax E-Card</string>
    <string name="driving_licence_replacement">Lost driving licence replacement</string>
    <string name="searchTerm">Search</string>


    <!-- Form activity en -->
    <string name="tax_id">Your Tax ID</string>
    <string name="employeeID">Employee ID</string>
    <string name="old_passport_number">Old Passport Number (optional)</string>
    <string name="partner_birthdate">Partner\'s Date of Birth</string>
    <string name="partner_tax_id">Partner\'s Tax ID</string>
    <string name="passport_number">Passport Number</string>
    <string name="new_street_address">New Street Address</string>
    <string name="new_postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="driver_license_id">Driver License ID</string>
    <string name="driver_license_expiry_date">Driver License expiry date</string>
    <string name="applicationSentMsg">Application sent successfully, check status in the History tab</string>
    <string name="submitApplicationPromptMsg">This Application will be digitally signed as:\n%s, born %s\n\nI hereby confirm that all the data I provided is correct. I acknowledge that providing misleading information will lead to huge fines, bureaucracy hell and other unforeseeable consequences.</string>
    <string name="submitApplicationPromptTitle">Submit Application?</string>
    <string name="cancel">Cancel</string>
    <string name="signedInAs">Signed in as:\n%s</string>
    <string name="location_standesamt">Registry Location</string>
    <string name="location_finanzamt">Tax office Location</string>
    <string name="location_sozialamt">Social Welfare office Location</string>
    <string name="location_foreigners_office">Foreigners Office Location</string>
    <string name="body_height">Body Height</string>
    <string name="eye_color">Eye Color</string>
    <string name="partner_fullname">Partner\'s Full Name</string>
    <string name="submit">Submit</string>
    <string name="register_new_residence">Register new residence address</string>
    <string name="new_id_card">New ID card</string>
    <string name="new_passport">New Passport</string>
    <string name="extend_passport">Extend Passport</string>
    <string name="register_marriage">Register marriage</string>


</resources>