<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/preference_category_1" />
            <SwitchPreferenceCompat
                app:key="dark_mode"
                app:icon="@drawable/ic_baseline_map_24"
                app:title="@string/pref_dark_mode"/>
            <DropDownPreference
                app:key="languages_dd"
                app:icon="@drawable/ic_baseline_map_24"
                app:title="@string/pref_languages"
                app:summary="@string/pref_languages_summary"/>

    <PreferenceCategory app:title="@string/pref_misc" />
            <Preference
                app:key="feedback"
                app:icon="@drawable/ic_baseline_map_24"
                app:title="@string/pref_feedback"
                app:summary="@string/pref_feedback_summary"/>
</PreferenceScreen>