<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_lastName"
        android:layout_marginBottom="23dp"
        android:autofillHints=""
        android:hint="@string/alertDialog_firstname_hint"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_dateOfBirth"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:hint="@string/alertDialog_lastname_hint"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_dateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_wohnort"
        android:layout_marginBottom="1dp"
        android:autofillHints=""
        android:hint="@string/alertDialog_birth_date_hint"
        android:inputType="date"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_wohnort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_postalCode"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:hint="@string/alertDialog_domicil_hint"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_postalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_street"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:hint="@string/alertDialog_postal_code_hint"
        android:inputType="number"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/edit_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-3dp"
        android:autofillHints=""
        android:hint="@string/alertDialog_street_hint"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />

</RelativeLayout>